# KilltheBugs

Landsat Processing/: README.rst  pyproject.toml
Landsat Processing/data/shapefiles/prediction_grids/: Prediction_grid_1000m.dbf  Prediction_grid_1000m.sbn  Prediction_grid_1000m.sbx  Prediction_grid_1000m.shp  Prediction_grid_1000m.shp.xml  Prediction_grid_1000m.shx  Prediction_grid_500m.dbf  Prediction_grid_500m.sbn  Prediction_grid_500m.sbx  Prediction_grid_500m.shp  Prediction_grid_500m.shp.xml  Prediction_grid_500m.shx  (+6 more)
Landsat Processing/notebooks/.ipynb_checkpoints/: Test Environment with required Libraries-checkpoint.ipynb
Landsat Processing/notebooks/chip-processing/: Clip Landsat Imagery.ipynb  Code Excerpt from Lyle.ipynb  ISHB_input_file.csv  Image Query.ipynb  Load LandSat.ipynb  clean_ishb_dataset.csv  folder_details.csv
Landsat Processing/resources/: ELI5- How to install GDAL for Python - gis.url  GISInternals Support Site.url  GitHub - Toblerity-Fiona- Fiona reads and writes geographic data files.url  Help in installing GDAL. No GDAL release for Python 3.8.1 version 1916 in GISInternals. - gis.url  How to install GDAL on windows – Shanker KC.url  Installing GDAL - OGR for Python on Windows - Python, GIS and stuff….url  Installing GDAL for Windows – IDRE Sandbox.url  OLD METHOD- Installing GDAL - OGR for Python on Windows - Python, GIS and stuff….url  Python Extension Packages for Windows - Christoph Gohlke.url
Landsat Processing/resources/wheels/: earthpy-0.9.4-py3-none-any.whl
Landsat Processing/tests/: test_landsat_processing.py
(+3510 files in other folders)
