[tool.poetry]
name = "landsat-processing"
version = "0.1.0"
description = ""
authors = ["Seth Docherty <seth.docherty@foretify.ai>"]

[tool.poetry.dependencies]
python = "^3.9"
notebook = "6.4.10" 
pandas = "1.4.2"
gdal = {path = "resources/wheels/GDAL-3.4.2-cp39-cp39-win_amd64.whl"}
earthpy = {path = "resources/wheels/earthpy-0.9.4-py3-none-any.whl"}
fiona = {path = "resources/wheels/Fiona-1.8.21-cp39-cp39-win_amd64.whl"}
rasterio = {path = "resources/wheels/rasterio-1.2.10-cp39-cp39-win_amd64.whl"}
xarray = "^2022.3.0"
rioxarray = "^0.10.3"
Pillow = "^9.1.0"
plotly = "^5.7.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"